[project]
name = "ryl-pre-commit"
version = "0.0.0"
description = "Pre-commit hook for ryl, the fast YAML linter."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["yaml", "linter", "pre-commit", "rust"]
dependencies = [
    "ryl==0.3.1",
]

[project.urls]
Homepage = "https://github.com/owenlamont/ryl"
Repository = "https://github.com/owenlamont/ryl-pre-commit"
